# data-analysis-template

./: .gitattributes  .gitignore  COPIER_USAGE.md  LICENSE  Makefile  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja  setup.bat  setup.sh
.github/: dependabot.yml  template-variables.json
.github/workflows/: ci.yml  code-quality.yml
notebooks/: 00-template-marimo.py  00-template-notebook.ipynb
src/data_analysis_template/: __init__.py
tests/: __init__.py  test_utils.py  test_utils.py.jinja
